WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55996
Some Gtk code uses defined(USE_FREETYPE) instead of just USE(FREETYPE)
https://bugs.webkit.org/show_bug.cgi?id=55996
Summary
Some Gtk code uses defined(USE_FREETYPE) instead of just USE(FREETYPE)
Eric Seidel (no email)
Reported
2011-03-09 00:14:23 PST
Some Gtk code uses defined(USE_FREETYPE) instead of just USE(FREETYPE) platform/graphics/cairo/OwnPtrCairo.cpp:#if defined(USE_FREETYPE) platform/graphics/cairo/OwnPtrCairo.cpp:#if defined(USE_FREETYPE) platform/graphics/cairo/OwnPtrCairo.h:#if defined(USE_FREETYPE) platform/graphics/cairo/OwnPtrCairo.h:#if defined(USE_FREETYPE) platform/graphics/cairo/RefPtrCairo.cpp:#if defined(USE_FREETYPE) platform/graphics/cairo/RefPtrCairo.cpp:#if defined(USE_FREETYPE) platform/graphics/cairo/RefPtrCairo.h:#if defined(USE_FREETYPE) platform/graphics/cairo/RefPtrCairo.h:#if defined(USE_FREETYPE) platform/graphics/gtk/FontGtk.cpp:#if defined(USE_FREETYPE) platform/graphics/gtk/FontGtk.cpp:#if defined(USE_FREETYPE) platform/graphics/gtk/FontGtk.cpp:#if defined(USE_FREETYPE) platform/graphics/gtk/FontGtk.cpp:#if defined(USE_FREETYPE) platform/graphics/gtk/FontGtk.cpp:#if defined(USE_FREETYPE) platform/graphics/gtk/FontGtk.cpp:#if defined(USE_FREETYPE) Seems like a typo/misunderstanding?
Attachments
Proposed patch
(7.28 KB, patch)
2011-03-10 12:18 PST
,
Alejandro G. Castro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Seidel (no email)
Comment 1
2011-03-09 00:40:32 PST
Actually, that would fail due to USE(FOO) assumes WTF_USE_FOO. I wonder where we're getting USE_FREETYPE from.
Alejandro G. Castro
Comment 2
2011-03-10 11:58:47 PST
(In reply to
comment #1
)
> Actually, that would fail due to USE(FOO) assumes WTF_USE_FOO. I wonder where we're getting USE_FREETYPE from.
It is defined in the Source/WebCore/GNUmakefile.am: if USE_FREETYPE webcoregtk_cppflags += \ -DUSE_FREETYPE=1 \ -I$(srcdir)/Source/WebCore/platform/graphics/freetype ... I think it is just an oversight, I would say we should use the macro USE.
Alejandro G. Castro
Comment 3
2011-03-10 12:18:38 PST
Created
attachment 85368
[details]
Proposed patch I've added also the USE_PANGO define to the patch.
Martin Robinson
Comment 4
2011-03-10 12:28:41 PST
Comment on
attachment 85368
[details]
Proposed patch Great. Thanks for the cleanup.
Alejandro G. Castro
Comment 5
2011-03-10 12:33:13 PST
Comment on
attachment 85368
[details]
Proposed patch Clearing flags on attachment: 85368 Committed
r80744
: <
http://trac.webkit.org/changeset/80744
>
Alejandro G. Castro
Comment 6
2011-03-10 12:33:33 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug